_includes/css/agency.css
/* ... */
@media (min-width: 768px) {

  header {
    min-height: 100%;
  }

  header .header-content {
    position: absolute;
    top: 30%;
    display: block;
    vertical-align: center;
    -webkit-transform: translateY(-135%);
    -ms-transform: translateY(135%);
    transform: translateY(-135%);
    padding: 0 80px;
    text-align: center;
 
  }

  header .header-content .header-content-inner {
    max-width: 1000px;
    display: block;
    margin-left: auto;
    margin-right: auto;
  }

  header .header-content .header-content-inner h1 {
    font-size: 50px;
  }

  header .header-content .header-content-inner p {
    font-size: 18px;
    max-width: 80%;
    margin-left: auto;
    margin-right: auto;
  }
    header .header-content .highlight{
        background-color: #F3F3F3;
    }

}

@media (max-width: 600px){

    header {
    background-position: center;
    background-image: url('img/static-eyes.png');
    background-repeat: repeat;
    }
}

.button .top {
    margin: 35px 5px 5px 5px;
    z-index: 98;
    position: relative;
    background-color: transparent;
    padding: 18px 20px 18px 20px;
    border: 2px solid #42049B;
    display: inline-block;

}

.button-dark .top {
    border: 2px solid #42049B;
}

.button .top .label {
    font-weight: 700;
    color: #42049B;
    font-size: 16px;
    line-height: 110%;
    letter-spacing: 1px;
    text-align: center;
    text-transform: uppercase;
    -webkit-transition: all .15s ease-out;
    -moz-transition: all .15s ease-out;
    -o-transition: all .15s ease-out;
    transition: all .15s ease-out
}

.button-dark .top .label {
    color: transparent;
}

.button:hover .top .label {
    color: #ED225D
}

.button-border {
    position: absolute;
    background-color: #ED225D;
    -webkit-transition: all .25s ease-out;
    -moz-transition: all .25s ease-out;
    -o-transition: all .25s ease-out;
    transition: all .25s ease-out
}

.button:hover .top .button-border-left,.button:hover .top .button-border-right {
    height: calc(100% + 2px)
}

.button:hover .top .button-border-top,.button:hover .top .button-border-bottom {
    width: calc(100% + 2px)
}

.button-border-left {
    left: -2px;
    bottom: -2px;
    width: 4px;
    height: 0
}

.button-border-top {
    left: -2px;
    top: -2px;
    width: 0;
    height: 4px
}

.button-border-right {
    right: -2px;
    top: -2px;
    width: 4px;
    height: 0
}

.button-border-bottom {
    right: -2px;
    bottom: -2px;
    width: 0;
    height: 4px
}

.button-bottom {
    z-index: 95;
    margin: 42px 150px 15px 5px;
    position: absolute;
    background-color: #1EF7B7;
    height: 60px;
    width:190px;
    border:  none;
    display: inline-block;
    right: 21%;
}

@media (max-width: 600px) {
.button-bottom {
    visibility: hidden;
 }
}

section {
    padding: 100px 0;
}

section h2.section-heading {
    margin-top: 0;
    margin-bottom: 15px;
    font-size: 40px;
}

section h3.section-subheading {
    margin-bottom: 75px;
    text-transform: none;
    font-family: {{ site.data.template.font.secondary }};
    font-size: 16px;
    font-style: italic;
    font-weight: 400;
}

@media(min-width:768px) {
    section {
        padding: 150px 0;
    }
}


#portfolio .portfolio-item {
    right: 0;
    margin: 0 0 15px;
}

#portfolio .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
    background: rgba(15,15,15, .9);/* Fallback when no plugin support */
    background: rgba(15,15,15, .9);
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
    opacity: 1;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 20px;
    color: #fff;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
    margin-top: -12px;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
    margin: 0;
}

#portfolio .portfolio-item .portfolio-caption {
    margin: 0 auto;
    padding: 25px;
    max-width: 400px;
    text-align: center;
    background-color: #fff;
}

#portfolio .portfolio-item .portfolio-caption h4 {
    margin: 0;
    text-transform: none;
}

#portfolio .portfolio-item .portfolio-caption p {
    margin: 0;
    font-size: 16px;
}

#portfolio * {
    z-index: 2;
}

@media(min-width:767px) {
    #portfolio .portfolio-item {
        margin: 0 0 30px;
    }
}



footer {
    padding: 25px 0;
    text-align: center;
}

footer span.copyright {
    text-transform: uppercase;
    text-transform: none;
    font-family: {{ site.data.template.font.primary }};
    line-height: 40px;
}

footer ul.quicklinks {
    margin-bottom: 0;
    text-transform: uppercase;
    text-transform: none;
    font-family: {{ site.data.template.font.primary }};
    line-height: 40px;
}

ul.social-buttons {
    margin-bottom: 0;
}

ul.social-buttons li a {
    display: block;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 40px;
    outline: 0;
    color: #fff;
    background-color: #000;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

ul.social-buttons li a:hover,
ul.social-buttons li a:focus,
ul.social-buttons li a:active {
    background-color: #{{ site.data.template.color.primary }};
}

.btn:focus,
.btn:active,
.btn.active,
.btn:active:focus {
    outline: 0;
}
/* ... */

